--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     与武力的斗爭……一场场刀光剑影的生死悲欢，一幅幅风云变幻的历史画卷，留下多少品味不尽
                     的美谈佳话！本书为改编自原著的白话文版，版本权威，情节丰富完整，将带领读者领略经典之
                     作的无穷魅力。</p>
+                <article>
                 <dt>名师导读</dt>
                 <dd>用画线点评或侧栏批注点评的形式，对内文中的词句进行分析，引导读者深人思考，帮助其更好地理解作品主旨。</dd>
 
@@ -37,7 +38,8 @@
                 
                 <dt>知识考点</dt>
                 <dd>从作者地位到情节关联，再到细节领悟，多角度全方位地把整个作品贯穿起来，使读者加深理解，获得新的认识。</dd>
-
+                </article>
+                <article>
                 <h2>图书信息</h2>
 
                 <ul>
@@ -49,7 +51,8 @@
                     <li>邮政编码　515063</li>
                     <li>电话　0754-82904613</li>
                 </ul>
-
+                </article>
+                <article>
                 <ul>
                     <li>印刷　德富泰（唐山）印务有限公司</li>
                     <li>开本　787mmx 1092mm 1/16</li>
@@ -58,11 +61,9 @@
                     <li>版次　2014年6月第1版</li>
                     <li>印次　2021年5月第17次印刷</li>
                     <li>定价　19.80元</li>
-                    <li>书号　ISBN 978-7-5658-1305-4
-                    </li>
-                    <li></li>
+                    <li>书号　ISBN 978-7-5658-1305-4</li>
                 </ul>
-
+                </article>
             </section>
             <aside>
                 <h2>喜欢就下单吧！</h2>
