--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         <!-- main里面就是主要的信息，包括section和aside -->
         <main>
             <section>
+                <article>
                 <h2>图书介绍</h2>
                 <p>《三国演义》为中国历史演义小说的经典之作，通过波澜壮阔的历史背景、错综复杂的政治和军事予斗、叱咤风云的英雄人
                     物，演绎了三国时期各种社会矛盾的渗透与转化。忠义与奸佞的冲突、豪杰与奸雄的较量、谋略
                     与武力的斗爭……一场场刀光剑影的生死悲欢，一幅幅风云变幻的历史画卷，留下多少品味不尽
                     的美谈佳话！本书为改编自原著的白话文版，版本权威，情节丰富完整，将带领读者领略经典之
                     作的无穷魅力。</p>
+                </article>
                 <article>
                 <dt>名师导读</dt>
                 <dd>用画线点评或侧栏批注点评的形式，对内文中的词句进行分析，引导读者深人思考，帮助其更好地理解作品主旨。</dd>
