--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <section>
                 <article>
                 <h2>图书介绍</h2>
+                <img src="img/sanguofengmian.jpeg" alt="这是一张三国演义图书封面照片">
                 <p>《三国演义》为中国历史演义小说的经典之作，通过波澜壮阔的历史背景、错综复杂的政治和军事予斗、叱咤风云的英雄人
                     物，演绎了三国时期各种社会矛盾的渗透与转化。忠义与奸佞的冲突、豪杰与奸雄的较量、谋略
                     与武力的斗爭……一场场刀光剑影的生死悲欢，一幅幅风云变幻的历史画卷，留下多少品味不尽
