--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>世界经典文学名著《三国演义》（名师精读版）</title>
         <meta charset="uft-8">
+        <meta name="author" content="Jimmy Shen">
+        <meta name="description" content="世界经典文学名著《三国演义》（名师精读版），为中国历史演义小说的经典之作，通过波澜壮阔的历史背景、错综复杂的政治和军事予斗、叱咤风云的英雄人
+        物，演绎了三国时期各种社会矛盾的渗透与转化。忠义与奸佞的冲突、豪杰与奸雄的较量、谋略
+        与武力的斗爭……">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -14,9 +18,11 @@
         <main>
             <section>
                 <article>
-                <h2>图书介绍</h2>
-                <img src="img/sanguofengmian.jpeg" alt="这是一张三国演义图书封面照片">
-                <p>《三国演义》为中国历史演义小说的经典之作，通过波澜壮阔的历史背景、错综复杂的政治和军事予斗、叱咤风云的英雄人
+                    <h2>图书介绍</h2>
+                <!-- 一张图书封面 -->
+                <a href="https://item.taobao.com/item.htm?ft=t&id=672719883966&spm=a2141.7631565.tbshopmod-slide_poster.2&scm=1007.31166.221028.0&pvid=49e264a0-b736-4f54-8017-d12ee53f211d" title="点击图片从淘宝购买这本书">   
+                <img src="img/sanguofengmian.jpeg" alt="这是一张三国演义图书封面照片"></a> 
+                    <p>《三国演义》为中国历史演义小说的经典之作，通过波澜壮阔的历史背景、错综复杂的政治和军事予斗、叱咤风云的英雄人
                     物，演绎了三国时期各种社会矛盾的渗透与转化。忠义与奸佞的冲突、豪杰与奸雄的较量、谋略
                     与武力的斗爭……一场场刀光剑影的生死悲欢，一幅幅风云变幻的历史画卷，留下多少品味不尽
                     的美谈佳话！本书为改编自原著的白话文版，版本权威，情节丰富完整，将带领读者领略经典之
@@ -69,12 +75,9 @@
                 </article>
             </section>
             <aside>
-                <h2>喜欢就下单吧！</h2>
-                <ul>
-                    <li>价格：10元</li>
-                    <li><button>淘宝下单</button></li>
-                </ul>
-
+                <h2>10元包邮还等什么！</h2>
+                    <p>价格：10元（包邮）</p>
+                    <button><a href="https://item.taobao.com/item.htm?ft=t&id=672719883966&spm=a2141.7631565.tbshopmod-slide_poster.2&scm=1007.31166.221028.0&pvid=49e264a0-b736-4f54-8017-d12ee53f211d" title="从淘宝下单吧！">淘宝下单页面</a></button>
             </aside>
         </main>
         
